CAMBIOS EN ATLETAS Y OPENAPI